AutoMod: fix overflow of long lines on wiki page
AM condition text was overflowing to the right side of the page, this
just fixes it so it all is shown nicely in normal paragraph form.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -172,6 +172,13 @@
 }
 
 // Specific wiki page styles
-.wiki-page-config-automoderator #editform textarea {
-  font-family: "Bitstream Vera Sans Mono", Consolas, monospace;
+.wiki-page-config-automoderator {
+  #editform textarea {
+    font-family: "Bitstream Vera Sans Mono", Consolas, monospace;
+  }
+
+  .wiki-page-content pre {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+  }
 }
